# bbox2d_to_3d

./: CMakeLists.txt  README.md  package.xml
example/: plot.py
include/bbox2d_to_3d_node/: add_fake_depth_node.hpp  bbox2d_to_3d_node.hpp  bbox2d_to_3d_quick_node.hpp  bbox2d_to_3d_sync_node.hpp
src/: add_fake_depth_node.cpp  bbox2d_to_3d_node.cpp  bbox2d_to_3d_quick_node.cpp  bbox2d_to_3d_sync_node.cpp
